검색 로직 재수정